apps/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 8989
          readinessProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: transmission-data
              mountPath: /data
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config-local
        - name: transmission-data
          persistentVolumeClaim:
            claimName: transmission-data-local
