apps/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: transmission
spec:
  type: ClusterIP
  selector:
    app: sonarr
  ports:
    - name: web
      port: 8989
      targetPort: 8989
